[package]
name = "qbt-reannounce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features = ["derive", "env"] }
parse_duration = "2.1.1"
qbittorrent-web-api = "0.6.4"
serde = "1.0.145"
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
